--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "start:dev": "cross-env NODE_ENV=production nodemon --watch server.js"
+    "start:dev": "cross-env NODE_ENV=production nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,8 @@
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "moment": "^2.29.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "url": "^0.11.0"
