--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
+    "helmet": "^5.0.2",
     "http": "^0.0.1-security",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
