--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
+    "geoip-lite": "^1.4.4",
     "helmet": "^5.0.2",
     "http": "^0.0.1-security",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
+    "request-ip": "^2.1.3",
     "url": "^0.11.0"
   },
   "type": "module"
