--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "request-ip": "^2.1.3",
+    "socket.io": "^4.4.1",
     "url": "^0.11.0"
   },
   "type": "module"
