--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-bearer-token": "^2.4.0",
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.4",
     "helmet": "^5.0.2",
