--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-bearer-token": "^2.4.0",
+    "express-cache-controller": "^1.1.0",
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.4",
     "helmet": "^5.0.2",
     "http": "^0.0.1-security",
+    "install": "^0.13.0",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.0",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "request-ip": "^2.1.3",
